--- a/Manifests/dss.yml
+++ b/Manifests/dss.yml
@@ -7,13 +7,9 @@ type: Opaque
 data:
   CLOUDINARY_CLOUD_NAME: ZHhneWNrYXBuCg==
   CLOUDINARY_KEY: ODQ5NjkzNjExODU4Nzg0Cg==
-  CLOUDINARY_SECRET: YXdzIGF3c2NsaXYyLnppcCBiaW5kLnltbCBjdGwuc2ggcm9sLnltbCBzZWMueW1sIHNuYXAgc3Zj
-LnltbAo=
-  MAPBOX_TOKEN: c2suZXlKMUlqb2liV0ZxWldWa0xXdG9ZVzRpTENKaElqb2lZMngyT1hjME9YbGlNSGRyWnpKcmJu
-UjVaV0owZWpjellpSjkuRlNjeElwbGtzU1ZsemRaWDU4dnktdwo=
-DB_URL: bW9uZ29kYitzcnY6Ly9tYWplZWRraGFuMDk4OTA6eTdLdjRwbXFsY2dDcHVaeUBtYWplZWVkLWxv
-YWNhbC1zZXJ2ZXItZC40eTh3YmNnLm1vbmdvZGIubmV0Lz9yZXRyeVdyaXRlcz10cnVlJnc9bWFq
-b3JpdHkmYXBwTmFtZT1NQUpFRUVELUxPQUNBTC1TRVJWRVItREVQTE9NRU5ULURCCg==
+  CLOUDINARY_SECRET: YXdzIGF3c2NsaXYyLnppcCBiaW5kLnltbCBjdGwuc2ggcm9sLnltbCBzZWMueW1sIHNuYXAgc3ZjLnltbAo=
+  MAPBOX_TOKEN: c2suZXlKMUlqb2liV0ZxWldWa0xXdG9ZVzRpTENKaElqb2lZMngyT1hjME9YbGlNSGRyWnpKcmJuUjVaV0owZWpjellpSjkuRlNjeElwbGtzU1ZsemRaWDU4dnktdwo=
+  DB_URL: bW9uZ29kYitzcnY6Ly9tYWplZWRraGFuMDk4OTA6eTdLdjRwbXFsY2dDcHVaeUBtYWplZWVkLWxvYWNhbC1zZXJ2ZXItZC40eTh3YmNnLm1vbmdvZGIubmV0Lz9yZXRyeVdyaXRlcz10cnVlJnc9bWFqb3JpdHkmYXBwTmFtZT1NQUpFRUVELUxPQUNBTC1TRVJWRVItREVQTE9NRU5ULURCCg==
   SECRET: ZGV2b3Bzc2hhY2s=
 
 ---
@@ -33,7 +29,7 @@ spec:
     spec:
       containers:
         - name: yelp-camp-container
-          image: majeed09890/campa:latest
+          image: majeedkhan09890/campa:latest
           ports:
             - containerPort: 3000
           env:
