--- a/Manifests/dss.yml
+++ b/Manifests/dss.yml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
         - name: yelp-camp-container
-          image: majeedkhan09890/camp:latest
+          image: majeedkhan09890/campa:latest
           ports:
             - containerPort: 3000
           env:
